--- a/style.css
+++ b/style.css
@@ -78,19 +78,19 @@ body{
     font-size: 15px;
 }
 #btn-encriptar {
-    padding: 24px;
-    width: 30%;
-    height: 30%;
-    border-radius: 24px;
-    margin-left: 15%;
+    padding: 14px;
+    width: 20%;
+    height: 20%;
+    border-radius: 15px;
+    margin-left: 10%;
     background: #0a3871;
     color:#e9ecf8
 }
 #btn-desencriptar {
-    padding: 24px;
-    width: 30%;
-    height: 30%;
-    border-radius: 24px;
+    padding: 14px;
+    width: 20%;
+    height: 20%;
+    border-radius: 15px;
     margin-left: 10%;
     background: #d8dfe8;
 }
@@ -110,13 +110,11 @@ body{
     height: auto;
     border-radius: 24px;
     margin-left: 10%;
-    margin-top: 10%;
 }
 .colum1 p {
     float: left;
-    width: 80%;
+    width: auto;
     height: auto;
     border-radius: 24px;
     margin-left: 10%;
-    margin-top: 10%;
 }
